--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     height: 100%;
   }
   </style>
-  <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@700&display=swap" rel="stylesheet">    <title>Camisa Flamengo Retrô  2009</title>
+  <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@700&display=swap" rel="stylesheet">    <title>Pagina Inicial</title>
 </head>
 
 <body style="background-color: rgb(216, 211, 211);" >
