--- a/index.html
+++ b/index.html
@@ -170,19 +170,19 @@
                 </div>
             </div>
             <div class="col-lg-4">
-                <!-- <div class="d-flex justify-content-center">
+                 <div class="d-flex justify-content-center">
             
                     <div class="areaModelos mt-2 ml-3 mr-3">
-                        <h5 style="color: grey;" class="H3mengo mt-3 ml-2 mr-2">Camisa Flamengo Retrô 2009</h5>
+                        <h5 style="color: grey;" class="H3mengo mt-3 ml-2 mr-2">Camisa Flamengo Retrô 1990</h5>
                         <div class="d-flex justify-content-center">
-                            <img src="mengo1.jpeg" height="200" class=" ml-2 mr-2 imgstilo" alt="">
+                            <img src="mengo1990.jpeg" height="200" class=" ml-2 mr-2 imgstilo" alt="">
                         </div>
                         <div class="d-flex justify-content-center">
                 
-                            <a  style="color: white;" href="" class="efeito efeito-3 mb-3" >Comprar</a>
+                            <a  style="color: white;" href="https://jokeshop.github.io/CamisaFlamengoretro1990/" class="efeito efeito-3 mb-3" >Comprar</a>
                             </div>
                     </div>
-                    </div> -->
+                    </div> 
             </div>
             </div>
             <div class="d-flex justify-content-center mb-1">
