--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
                     <div class="areaModelos mt-2 ml-3 mr-3">
                         <h5 style="color: grey;" class="H3mengo mt-3 ml-2 mr-2">Camisa Flamengo Retrô 1990</h5>
                         <div class="d-flex justify-content-center">
-                            <img src="mengo1990.jpeg" height="200" class=" ml-2 mr-2 imgstilo" alt="">
+                            <img src="mengo1990.png" height="200" class=" ml-2 mr-2 imgstilo" alt="">
                         </div>
                         <div class="d-flex justify-content-center">
                 
