--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
   <div style="background-color:black ;" class="collapse navbar-collapse" id="collapsibleNavbar">
     <ul class="navbar-nav">
       <li class="nav-item">
-        <a style="color:white ;" class="nav-link" href="paginainicial.html"><b>Home</b></a>
+        <a style="color:white ;" class="nav-link" href="https://jokeshop.github.io/PaginaInicial/"><b>Home</b></a>
       </li>
     
       <li class="nav-item">
