--- a/paginaperguntas.html
+++ b/paginaperguntas.html
@@ -62,7 +62,7 @@ else{
         <a style="color:white ;"  class="nav-link" href="usuarios.html"><b>Quem Deve participar?</b></a>
       </li> -->
       <li class="nav-item">
-        <a style="color:white ;"  class="nav-link" href="paginaperguntas.html"><b>Perguntas Frequentes</b></a>
+        <a style="color:white ;"  class="nav-link" href="https://jokeshop.github.io/PaginaInicial/"><b>Perguntas Frequentes</b></a>
       </li>    
       <li class="nav-item">
         <a style="color:white ;"  class="nav-link" href="outrosmodelos.html"><b>Outros Modelos</b></a>
