--- a/index.html
+++ b/index.html
@@ -185,6 +185,26 @@
                     </div> 
             </div>
             </div>
+        <div class="row mb-2">
+            <div class="col-lg-4">
+                <div class="d-flex justify-content-center">
+            
+                    <div class="areaModelos mt-2 ml-3 mr-3">
+                        <h5 style="color: grey;" class="H3mengo mt-3 ml-2 mr-2">Camisa Brasil  2002
+                        </h5>
+                        <div class="d-flex justify-content-center">
+                            <img src="brasil.PNG" height="200" class=" ml-2 mr-2 imgstilo" alt="">
+                        </div>
+                        <div class="d-flex justify-content-center">
+                
+                            <a style="color: white;" href="https://jokeshop.github.io/CamisaBrasilRetro2002/?fbclid=IwAR2JVNf1M00r4Dmg5BUl7OwaLuLl-7skA2UCLeCsJwg98V9S5uIMmsmroNc"  class="efeito efeito-3 mb-3" >Comprar</a>
+                            </div>
+                    </div>
+                    </div>
+            </div>
+            <div class="col-lg-4"></div>
+            <div class="col-lg-4"></div>
+    </div>
          <div class="d-flex justify-content-center mb-1">
     <div style="background-color: black;width: 400px;" class="areaCompra" >
     <div class="d-flex justify-content-center mb-1">
