--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
                         <h5 style="color: grey;" class="H3mengo mt-3 ml-2 mr-2">Camisa Brasil  2002
                         </h5>
                         <div class="d-flex justify-content-center">
-                            <img src="brasil.PNG" height="200" class=" ml-2 mr-2 imgstilo" alt="">
+                            <img src="brasil.png" height="200" class=" ml-2 mr-2 imgstilo" alt="">
                         </div>
                         <div class="d-flex justify-content-center">
                 
