--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
          <div class="d-flex justify-content-center mb-1">
     <div style="background-color: black;width: 400px;" class="areaCompra" >
     <div class="d-flex justify-content-center mb-1">
-      <h6 style="color:white; "class="H3mengo mt-2 ml-2 mr-2">Contato<br><span><a href="jokeshopatendimento@gmail.com?subject=Hello%20again">jokeshopatendimento@gmail.com</a></span><br><span><a style="color: green;" href="https://api.whatsapp.com/send?phone=5531991265232&text=Ol%C3%A1%2C%20estou%20interessado%20em%20comprar%20uma%20camisa%20da%20Jokeshop!">(31)99126-5232</a></span></h6>
+      <h6 style="color:white; "class="H3mengo mt-2 ml-2 mr-2">Contato<br><span><a href="jokeshopatendimento@gmail.com?subject=Hello%20again">jokeshopatendimento@gmail.com</a></span><br><span><a style="color: green;" href="https://api.whatsapp.com/send?phone=5531991265232&text=Ol%C3%A1%2C%20estou%20interessado%20em%20comprar%20uma%20camisa%20da%20Jokeshop!">(31)99126-5232</a></span><br> CNPJ:40.518.541/0001-20.</h6>
     </div>
     </div>
   </div>
